# ai-context-framework

./: .env.example  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  Roadmap.md  __init__.py  cli.py  event-context-standard.html  goal-driven-feedback-loop.html  http_api.html  index.html  install_test_requirements.sh  mkdocs.yml  multi-expert-orchestration-poc.html  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml  svg_layered_generation.html
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
Server/: npcContextService.js  package.json
core/: __init__.py  ai_inference.py  cache_manager.py  categorizer.py  context_filer.py  context_hooks.py  context_manager.py  context_pipeline.py  deduplicator.py  distributed_context_manager.py  fuser.py  policy_evaluator.py  time_decay_scorer.py  trust_module.py
dev/: TECHNICAL_ROADMAP.html  api_reference.html  contributing.html  extending.html  faq.html  getting_started.html  goal_feedback_loop.html  logging.html  model_storage_plan.html  network.html  ocr_to_structured_data.html  releasing.html  setup_gap_analysis.html
docs/: README.md  event-context-standard.md  goal-driven-feedback-loop.md  http_api.md  multi-expert-orchestration-poc.md  svg_layered_generation.md
getting_started/: multi_expert_orchestration_poc.html  quickstart.html  use_case_scenarios.html
inference/: __init__.py  complex_inference.py  dummy_engine.py
interfaces/: context_provider.py  context_scorer.py  filter_strategy.py  inference_engine.py  learning_interface.py  network_interface.py
network/: __init__.py  context_bus.py  network_manager.py  simple_network.py
networks/: simple_network.py
objects/: context_data.py  context_query.py  fused_context.py
parser/: __init__.py  log_parser.py  robo_connector_normalizer.py
pipelines/: __init__.py  context_pipeline.py  feedback_pipeline.py  vector_pipeline.py
policies/: simple_policy.py
providers/: __init__.py  base_context_provider.py  file_based_context_provider.py  file_context_provider.py  http_context_provider.py  kafka_context_provider.py  memory_context_provider.py  mock_context_provider.py  redis_context_provider.py  simple_context_provider.py  sqlite_context_provider.py
search/: search_index.json
simulation/: README.md  docker-compose.yml  multi_expert_orchestration_poc.py  poc_multi_expert.py
status/: layered_svg_progress.html
tests/: conftest.py  test_ann_index.py  test_audit_logger.py  test_cai_bridge.py  test_cai_service.py  test_cli.py  test_configurable_pipeline.py  test_context_engine_provider.py  test_context_event_payload.py  test_context_memory.py  test_context_model.py  test_context_pipeline.py  test_conversation_parser.py  test_csv_context_provider.py  test_docs_import_examples.py  test_feedback_pipeline.py  test_file_context_provider.py  test_goal_feedback_loop.py  test_goal_feedback_worker.py  test_goal_graph.py  test_http_context_provider.py  test_intent_pipeline.py  test_kafka_context_provider.py  test_logging_behaviour.py  test_marketing_coach.py  test_memory_context_provider.py  test_min_max_filter.py  test_model_bundle.py  test_model_cli.py  test_model_manager_bundle.py  test_model_manifest.py  test_model_registry.py  test_model_storage_format.py  test_neural_categorizer.py  test_neural_embedding_categorizer.py  test_ocr_context_provider.py  test_orchestrated_pipeline.py  test_personality_goal_strategy.py  (+18 more)
(+259 files in other folders)
