[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_context"
version = "0.1.0"
description = "A short description of my package"
readme = "README.md"
requires-python = ">=3.6"
authors = [{name = "Paweł Nowak", email = "pawel.nowak@robo-meister.com"}]
license = {text = "MIT"}
dependencies = [
    "numpy>=2.2.6",
    "torch>=2.7.0",
    "sympy>=1.14.0",
]

[project.urls]
Homepage = "https://github.com/Robo-Meister/ai-context-framework"
