[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caiengine"
version = "0.2.1"
description = "A Context-Aware AI Engine for decision automation, workflow reasoning, and dynamic task orchestration"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Paweł Nowak", email = "pawel.nowak@robo-meister.com"}]
license = "MIT"
keywords = ["ai", "context", "framework"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "numpy>=2.2.6",
    "sympy>=1.14.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ai = [
    "torch>=2.3.1",
    "onnx>=1.17.0",
    "PyYAML>=6.0.2",
]
redis = ["redis>=6.1.0"]
kafka = ["kafka-python>=2.0.2"]
mysql = ["mysql-connector-python>=9.1.0"]
postgresql = ["psycopg2-binary>=2.9.10"]
storage = [
    "mysql-connector-python>=9.1.0",
    "psycopg2-binary>=2.9.10",
]
docs = ["mkdocs>=1.6.0"]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "mypy",
    "black",
]

[project.urls]
Homepage = "https://github.com/Robo-Meister/ai-context-framework"
Repository = "https://github.com/Robo-Meister/ai-context-framework"

[project.scripts]
context = "caiengine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["caiengine*", "sitecustomize"]

